--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.3.1",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "docusaurus-plugin-sass": "^0.2.2",
+    "sass": "^1.49.9"
   },
   "browserslist": {
     "production": [
