--- a/package.json
+++ b/package.json
@@ -19,13 +19,16 @@
     "@mdx-js/react": "^1.6.22",
     "clsx": "^1.1.1",
     "docusaurus-lunr-search": "^2.1.15",
+    "docusaurus-plugin-sass": "^0.2.2",
+    "framer-motion": "^6.2.8",
     "prism-react-renderer": "^1.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.3.1",
-    "uuid": "^8.3.2",
-    "docusaurus-plugin-sass": "^0.2.2",
-    "sass": "^1.49.9"
+    "rehype-katex": "^5.0.0",
+    "remark-math": "^3.0.1",
+    "sass": "^1.49.9",
+    "uuid": "^8.3.2"
   },
   "browserslist": {
     "production": [
